samples/_failures_safe/1761670052_ad2284_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_330290e1.c:171:1: error: expected ‘{’ at end of input
  171 | void print_token_type(enum
      | ^~~~
